docker update fixes for BE

--- a/04_multi_container_apps/backend/Dockerfile
+++ b/04_multi_container_apps/backend/Dockerfile
@@ -8,7 +8,11 @@ RUN npm install
 
 COPY . .
 
+ENV MONGODB_URI=mongodb:27017/course-goals?authSource=admin
+ENV MONGODB_USERNAME=max
+ENV MONGODB_PASSWORD=secret
+
 EXPOSE 80
 
-CMD ["node","app.js"]
+CMD ["npm","start"]
 
