--- a/04_multi_container_apps/docker-compose.yaml
+++ b/04_multi_container_apps/docker-compose.yaml
@@ -26,7 +26,17 @@ services:
       - ./env/backend.env
     depends_on:
       - mongodb
+  frontend:
+    build: ./frontend
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./frontend/src:/app/src
 
+    stdin_open: true
+    tty: true
+    depends_on:
+      - backend
 volumes:
   data:
   logs:
